[tool.poetry]
name = "stat-scaling"
version = "0.1.0"
description = ""
authors = ["J David Smith <emallson@emallson.net>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
theano = "^1.0.5"
scipy = "^1.5.2"
pandas = "^1.1.1"
plotnine = "^0.7.1"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
python-language-server = {extras = ["all"], version = "^0.34.1"}
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
